<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>uk.co.bigsoft</groupId>
	<artifactId>filesucker</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>FileSucker</name>
	<description>Generates URLs from a pattern and downloads all the files.</description>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>22</source>
					<target>22</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
</project>